Added spinner feature

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Scroll Project</title>
+  <title>Infinite Scroll</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+  <div id="spinner" class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+
+
   <header>
     <h1>jQuery / PHP Infinite Scroll</h1>
   </header>
